--- a/Html/Robo Otto/css/styles.css
+++ b/Html/Robo Otto/css/styles.css
@@ -1,14 +1,5 @@
-h1 {
-    color: blue; font-size: 48px; font-family: 'Roboto', sans-serif;
-}
-
-body {
-    background-color: rgba(66, 66, 66, 0);
-}
-
-main {
-    background-color: rgba(255, 255, 255, 1);
-    padding: 5px;
-    margin-top: 20px;
-    border-radius: 16px;
+#menu, #menu ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
