--- a/Html/Robo Otto/css/styles.css
+++ b/Html/Robo Otto/css/styles.css
@@ -3,3 +3,12 @@
     padding: 0;
     list-style: none;
 }
+#menu {
+    width: 200px;
+    margin: 60px;
+    border: 1px solid #222;
+    background-color: #111;
+    background-image: linear-gradient(#444, #111);
+    border-radius: 6px;
+    box-shadow: 0 1px 1px #777;
+}
