--- a/Html/Robo Otto/css/styles.css
+++ b/Html/Robo Otto/css/styles.css
@@ -1,13 +1,13 @@
-h1 {
+#h1 {
     color: blue; font-size: 48px; font-family: 'Roboto', sans-serif;
 }
 
-body {
-    background-color: rgba(66, 66, 66, 0.5);
+#body {
+    background-color: rgba(15, 128, 128, 0.5);
 }
 
-main {
-    background-color: rgba(255, 255, 255, 1);
+#main {
+    background-color: rgb(19, 187, 108);
     padding: 5px;
     margin-top: 20px;
     border-radius: 16px;
