--- a/Flávio - Principal/Exercício Calc Desconto/css/style.css
+++ b/Flávio - Principal/Exercício Calc Desconto/css/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(6, 1, 20);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0 auto;
 }
 
 h2,p{
